Busqueda por tabla empleados

--- a/templates/mostrarDatos.html
+++ b/templates/mostrarDatos.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Busqueda por id de bitacora</h1>
-    <form action="/datos/" method="GET">
+    <form action="/datosBitacora/" method="GET">
         <input type="text" name="Id">
         <input type="submit" value="Buscar">
     </form>
